image update master

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    looks good as a project minh
+    looks good as a project minh images add
   </body>
 </html>
