update index master 3

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    looks good as a project minh images add add index 2
+    looks good as a project minh images add add index 2 index3
   </body>
 </html>
